--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,13 @@
 stages:
+  - test
   - build
+
+test:
+  stage: test
+  image: python-3.10-slim
+  script:
+    - python -V
+    - python -m doctest src/content.md
 
 .pages-build: &build
   image: pandoc/latex
