--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 test:
   stage: test
-  image: python-3.10-slim
+  image: python:3.10-slim
   script:
     - python -V
     - python -m doctest src/content.md
