--- a/slideshow.yml
+++ b/slideshow.yml
@@ -19,9 +19,13 @@ output-file: public/index.html
 standalone: true
 self-contained: true
 
+# These variables go to the renderer, here Reveal.js
 variables:
   theme: simple
   margin: 0.1  # to ensure readability
+  title-slide-attributes:
+    data-background-image: theme/image page de garde.jpg
+    data-background-size: cover
 
 slide-level: 2
 
