ci: generalize build script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,11 +12,12 @@ test:
 .pages-build: &build
   image: ojob/pandoc-plantuml
   script:
+    - cd src/
     - mkdir public/
     - mkdir plantuml-images/
     - pandoc --version
     # convert to slideshow, applying theme-specific afterwards (so with higher priority)
-    - pandoc --filter pandoc-plantuml --defaults slideshow.yml --defaults theme/pandoc-params.yml
+    - pandoc --filter pandoc-plantuml --defaults theme/pandoc-params.yml --self-contained *.md
   artifacts:
     paths:
       - public
