--- a/src/theme/pandoc-params.yml
+++ b/src/theme/pandoc-params.yml
@@ -1,8 +1,5 @@
 # Reference : https://pandoc.org/MANUAL.html#default-files
 
-input-files:
-  - src/content.md
-
 css: theme/theme.css # s'empile sur le thème Reveal.js, pour s'approcher du thème Kaizen
 
 include-in-header:
@@ -17,9 +14,22 @@ to: revealjs
 output-file: public/index.html
 
 standalone: true
-self-contained: true
+# Self-contained is triggered in CI pipeline
+# self-contained: true
 
 slide-level: 2
 
 verbosity: INFO
 fail-if-warnings: true
+
+# These variables go to the renderer, here Reveal.js
+variables:
+  theme: simple
+  # dimensions shall be int’s for Reveal.js to parse them correctly
+  width: 1280
+  height: 768
+  margin: 0.1  # to ensure readability
+
+  title-slide-attributes:
+    data-background-image: theme/image page de garde.jpg
+    data-background-size: cover
