--- a/src/theme-kzs/pandoc-params.yml
+++ b/src/theme-kzs/pandoc-params.yml
@@ -2,8 +2,8 @@
 
 css: theme/theme.css # s'empile sur le thème Reveal.js, pour s'approcher du thème Kaizen
 
-  #include-in-header:
-  #- theme/favicon.html
+include-in-header:
+  - theme/favicon.html
 
 include-after-body:
   - theme/footer.html
@@ -24,12 +24,12 @@ fail-if-warnings: true
 
 # These variables go to the renderer, here Reveal.js
 variables:
-  theme: sky
+  theme: simple
   # dimensions shall be int’s for Reveal.js to parse them correctly
   width: 1280
   height: 768
   margin: 0.1  # to ensure readability
 
   title-slide-attributes:
-    #data-background-image: theme/image page de garde.jpg
+    data-background-image: theme/image page de garde.jpg
     data-background-size: cover
